# keyboard-overlay

./: .gitignore  .gitmodules  Cargo.toml  README.md  config.kdl
.github/: build.yml
.github/workflows/: build.yml
crates/application/: Cargo.toml  tauri.conf.json
crates/application/src/: application.rs  config.rs
crates/frontend/: Cargo.toml  glue.js  index.html  index.scss
crates/frontend/src/: frontend.rs  logging.rs  main.rs  style.rs  utility.rs
crates/frontend/src/logging/: tauri.rs  wasm.rs
crates/shared/: Cargo.toml
crates/shared/src/: binding.rs  combo.rs  key.rs  layer.rs  layout.rs  lib.rs  switch.rs
