[package]
name = "application"
description = ""
repository = "https://github.com/temportalflux/keyboard-overlay"
license = "MIT OR Apache-2.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
version = "0.0.1"
edition = "2021"
default-run = "application"
rust-version = "1.60"

[[bin]]
name = "application"
path = "src/application.rs"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
shared = { path = "../shared" }
kdlize = { path = "../kdlize" }
kdl = { version = "5.0.0-alpha.0", git = "https://github.com/kdl-org/kdl-rs" }

anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"
multimap = "0.10"
itertools = "0.12"

log = { version = "0.4", features = ["std", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derivative = "2.2"
crossbeam-channel = "0.5"
async-channel = "2.2"

tauri = { version = "1.6.1", features = [ "api-all", "system-tray", "devtools" ] }
tauri-plugin-positioner = { version = "1.0", features = [ "system-tray"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-clipboard = "0.6.1"

reqwest = "0.12"
global-hotkey = "0.5"

[dependencies.windows]
version = "0.54"
features = [
	"Data_Xml_Dom",
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_Threading",
	"Win32_UI_WindowsAndMessaging",
]
