[package]
name = "shared"
description = ""
repository = "https://github.com/temportalflux/keyboard-overlay"
license = "MIT OR Apache-2.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
version = "0.0.1"
edition = "2021"

[features]
wasm = ["web-sys", "wasm-bindgen"]

[dependencies]
kdlize = { path = "../kdlize" }
kdl = { version = "5.0.0-alpha.0", git = "https://github.com/kdl-org/kdl-rs" }

log = { version = "0.4", features = ["std", "serde"] }
simplelog = "0.12"

anyhow = "1.0"
thiserror = "1.0"
itertools = "0.12"
enumset = { version = "1.0", features = ["serde"] }

serde = "1.0"
time = "0.3"

# wasm only
wasm-bindgen = {version = "0.2", optional = true }
web-sys = { version = "0.3", features = [], optional = true }
